--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,7 +19,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: ${{secrets.DOCKERHUB_USERNAME}}/create-graphql-server
+          images: ${{secrets.DOCKERHUB_USERNAME}}/cli-boilerplate
           tags: |
             type=ref,event=branch
             type=ref,event=pr
