--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "cli-boilerplate",
   "version": "0.1.0",
   "description": "Boilerplate to create CLI applications using Typescript",
-  "main": "dist/cli.js",
+  "main": "dist/main.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pherval/cli-boilerplate.git"
   },
   "bin": {
-    "my-program": "dist/cli.js"
+    "my-program": "dist/main.js"
   },
   "keywords": [
     "boilerplate",
@@ -77,7 +77,9 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "chalk": "^4.1.1"
+    "chalk": "^4.1.1",
+    "dotenv": "^10.0.0",
+    "mongodb": "^4.1.0"
   },
   "lint-staged": {
     "*": [
